# ChangeLog for eclass directory
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.821 2013/05/14 17:33:08 mgorny Exp $

  14 May 2013; Michał Górny <mgorny@gentoo.org> autotools-multilib.eclass,
  multilib-build.eclass:
  Enable EAPI=4 on multilib eclasses.

  11 May 2013; Sergei Trofimovich <slyfox@gentoo.org> ghc-package.eclass,
  haskell-cabal.eclass:
  Added 'ghc-supports-smp' and 'ghc-supports-dynamic-by-default' helpers. Added
  hint for users to run 'haskell-updater' if configure phase failed.

  11 May 2013; Alexis Ballier <aballier@gentoo.org> libtool.eclass:
  use find to get file permissions instead of chmod --reference which is not
  portable, bug #468952

  10 May 2013; Michał Górny <mgorny@gentoo.org> python-any-r1.eclass,
  python-r1.eclass, python-single-r1.eclass, python-utils-r1.eclass:
  Consistently create ${EPYTHON} subdir for Python wrappers. Fixes conflict
  between Python & vala wrappers, bug #469312.

  09 May 2013; Ryan Hill <dirtyepic@gentoo.org> toolchain.eclass:
  Drop support for graphite in 4.4/4.5 due to incompatibilities with newer ppl
  versions. Update graphite dependencies for 4.8 based on upstream
  recommendations. Also fixes some (harmless) configure flags getting applied
  to incorrect versions.

  08 May 2013; Sergey Popov <pinkbyte@gentoo.org> leechcraft.eclass:
  Restict supported EAPIs(due to pkg_pretend), some logic cleanup

  08 May 2013; Tim Harder <radhermit@gentoo.org> vim.eclass:
  Fix dangling gvim manpage symlinks (bug #455480, patch by Arfrever).

  08 May 2013; Tim Harder <radhermit@gentoo.org> vim.eclass:
  Fix build with sys-libs/ncurses[tinfo] (bug #457564, patch by Ben Longbons).

  05 May 2013; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
  Support complete EAPI src_test().

  04 May 2013; Julian Ospald <hasufell@gentoo.org> multilib-minimal.eclass:
  improve handling of DOCS variable wrt #468092
